tests/build/cases/widget_new/malformed_fields1.stderr
error[E0277]: the trait bound `(): IntoVar<SideOffsets>` is not satisfied
  --> cases/widget_new/malformed_fields1.rs:6:13
   |
6  |        let _ = wgt! {
   |  ______________^
7  | |/         margin = {
8  | ||             margin: 0;
   | ||__________________- required by a bound introduced by this call
9  | |          };
10 | |      };
   | |______^ the trait `IntoVar<SideOffsets>` is not implemented for `()`
   |
   = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `margin::margin`
  --> $WORKSPACE/zero-ui/src/properties/layout.rs
   |
   | pub fn margin(child: impl UiNode, margin: impl IntoVar<SideOffsets>) -> impl UiNode {
   |                                                ^^^^^^^^^^^^^^^^^^^^ required by this bound in `margin::margin`
